# FC_neural_networks_library

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: build-release.yaml
examples/data/: net.conv  net_.conv
examples/gui_example/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
examples/learning_example/: CMakeLists.txt  main.cpp
examples/net_inverse/: CMakeLists.txt  main.cpp
examples/usage_exmple/: CMakeLists.txt  main.cpp
examples/weights_visualization/: CMakeLists.txt  main.cpp
src/: blas_impl.cpp  blas_impl.h  io.cpp  learning.cpp  learning_private.h  preprocessing.cpp  private.cpp  sc_private.h  simple_conv.cpp  simple_conv.h
tests/: CMakeLists.txt  tests.cpp
tests/data/: net.conv
